---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{ "extends": ["format.json", "linter.json"] }
```

## `format.json`

```json
{ "formatter": { "enabled": true } }
```

## `linter.json`

```json
{
  "linter": {
    "rules": {
      "all": false,
      "suspicious": {
        "noDebugger": "warn"
      }
    }
  }
}
        
```

## `test.js`

```js
debugger; console.log("string"); 
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
test.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger; console.log("string");·
      │ ^^^^^^^^^
  
  i Suggested fix: Remove debugger statement
  
    1 │ debugger;·console.log("string");·
      │ ----------                       

```

```block
Checked 1 file(s) in <TIME>
```


